force-app/main/default/objects/ExternalPreferentialTicket__c/ExternalPreferentialTicket__c.object-meta.xml
<CustomObject>
    <label>External Preferential Ticket</label>
    <nameField>
        <displayFormat>E-{0000000}</displayFormat>
        <label>ExternalPreferentialTicket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Preferential Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>