force-app/main/default/objects/ExternalPreferentialTicket__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>External Preferential Tickets</relationshipLabel>
    <relationshipName>External_Preferential_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>