force-app/main/default/objects/ExternalPreferentialTicket__c/fields/Booking_Class__c.field-meta.xml
<CustomField>
    <fullName>Booking_Class__c</fullName>
    <label>Booking Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First class</fullName>
            </value>
            <value>
                <fullName>Economy class</fullName>
            </value>
            <value>
                <fullName>Business class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>