force-app/main/default/objects/ExternalPreferentialTicket__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <formula>Account__r.Budget__c</formula>
    <label>Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>