force-app/main/default/objects/ExternalPreferentialTicket__c/fields/Budget_Left__c.field-meta.xml
<CustomField>
    <fullName>Budget_Left__c</fullName>
    <label>Budget Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>