force-app/main/default/objects/ExternalPreferentialTicket__c/fields/Budget_Left_after_Used__c.field-meta.xml
<CustomField>
    <fullName>Budget_Left_after_Used__c</fullName>
    <formula>Budget_Left__c - Case_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Left after Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>