force-app/main/default/objects/ExternalPreferentialTicket__c/fields/Case_Used__c.field-meta.xml
<CustomField>
    <fullName>Case_Used__c</fullName>
    <label>Case Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>