force-app/main/default/objects/ExternalPreferentialTicket__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <length>225</length>
    <type>Text</type>
</CustomField>