force-app/main/default/objects/ExternalPreferentialTicket__c/fields/Itinerary_Departure__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Departure__c</fullName>
    <label>Itinerary(Departure)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TPE</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>