force-app/main/default/objects/ExternalPreferentialTicket__c/fields/Itinerary_Return__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Return__c</fullName>
    <label>Itinerary(Return)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TPE</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>