force-app/main/default/objects/ExternalPreferentialTicket__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>部門一</fullName>
            </value>
            <value>
                <fullName>部門二</fullName>
            </value>
            <value>
                <fullName>部門三</fullName>
            </value>
            <value>
                <fullName>一課</fullName>
            </value>
            <value>
                <fullName>二課</fullName>
            </value>
            <value>
                <fullName>三課</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>