force-app/main/default/objects/ExternalPreferentialTicket__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <label>PIC</label>
    <length>225</length>
    <type>Text</type>
</CustomField>