force-app/main/default/objects/ExternalPreferentialTicket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>送出申請</fullName>
            </value>
            <value>
                <fullName>主管簽核終</fullName>
            </value>
            <value>
                <fullName>取消申請</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>