force-app/main/default/objects/ExternalPreferentialTicket__c/fields/TAX_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>TAX_ID_Number__c</fullName>
    <label>TAX ID Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>