force-app/main/default/objects/ExternalPreferentialTicket__c/fields/Total_Purchase_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Quantity__c</fullName>
    <label>Total Purchase Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>