force-app/main/default/objects/ExternalPreferentialTicket__c/recordTypes/OfficialTicket.recordType-meta.xml
<RecordType>
    <fullName>OfficialTicket</fullName>
    <active>true</active>
    <label>公務票</label>
</RecordType>