force-app/main/default/objects/ExternalPreferentialTicket__c/recordTypes/q.recordType-meta.xml
<RecordType>
    <fullName>q</fullName>
    <active>true</active>
    <label>量票</label>
</RecordType>