force-app/main/default/objects/ExternalPreferentialTicket__c/recordTypes/ValueExchange.recordType-meta.xml
<RecordType>
    <fullName>ValueExchange</fullName>
    <active>true</active>
    <label>產品交換</label>
</RecordType>